# faithfulness

./: README.md  main.py  setup.cfg
experiments/: .gitignore  experiment_all_metrics.py  experiment_baseline.py  experiment_bertscore.py  experiment_entailment.py  experiment_ner.py  experiment_openie.py  experiment_qgqa.py  experiment_sentsim.py  experiment_srl.py  find_examples.py  merge_results.py  visualize_all_metrics.py
src/experiments/: experiment_all_metrics.py  experiment_bertscore.py  experiment_entailment.py  experiment_ner.py  experiment_openie.py  experiment_qgqa.py  experiment_sentsim.py  experiment_srl.py  prepare_bertscore_for_visualization.py  prepare_entailment_sent_for_visualization.py  prepare_ner_for_visualization.py  prepare_openie_for_visualization.py  prepare_qgqa_for_visualization.py  prepare_sentsim_for_visualization.py  prepare_srl_for_visualization.py  visualize_all_metrics.py
src/faithfulness/: BERTScore.py  Baseline.py  Entailment.py  Experimentor.py  NER.py  OpenIE.py  QGQA.py  SRL.py  SentSim.py
src/faithfulness/interfaces/: FaithfulnessInput.py  MetricInterface.py  SimilarityMetricInterface.py  UsesSimilarityMetricInterface.py
src/faithfulness/similarity/: ExactMatch.py  F1.py  SentCos.py  SimilarityMetricInterface.py
src/faithfulness/types/: AlignScoreResult.py  GroupedAlignScoreResult.py
src/faithfulness/utils/: Datasets.py  correlation.py  representation_utils.py  utils.py
src/faithfulness/visualization/: Visualizer.py  visualize_bertscore.py  visualize_entailment.py  visualize_ner.py  visualize_openie.py  visualize_qgqa.py  (+2 more)
