[metadata]
name = faithfulness
version = 0.0.4
author = Tim Fischer
author_email = tim.s.fischer96@googlemail.com
description = A library to evaluate faithfulness (factual correctness or consistency) of abstractive summaries.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bigabig/faithfulness
project_urls =
    Bug Tracker = https://github.com/bigabig/faithfulness/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jsonnet
    allennlp==2.1.0
    allennlp-models==2.1.0
    transformers
    stanza
    sentence_transformers

[options.packages.find]
where = src